
VERSION 2  CHANGE HOW WE HANDLE PER-PAGE RESULTS
================================================

   Version 2.0 - Change how we handle per-page results
      29/01/2016 15:27  2.0.0  initial release

VERSION 1  INITIAL RELEASE
==========================

   Version 1.1 - Added support to pas KNP paginator parameters (pageParameterName, etc); other un-released fixes
      16/10/2015 00:12  1.0.8  Fix the reset via get method
      17/08/2015 14:15  1.0.7  Handle post and get differently
      29/07/2015 23:51  1.0.6  Form options
      06/07/2015 22:53  1.0.5  Added wrapper helpers
      03/07/2015 10:29  1.0.4  Properly handle empty request data
      19/06/2015 12:13  1.0.3  Paginator now *uses* knp parameters
      19/06/2015 11:20  1.0.2  Added support for KNP paginator params (pageParameterName, etc); other un-released fixes
      19/06/2015 11:16  1.1.1  Added support to pass KNP paginator params (pageParameterName, etc); other un-released fixes
      19/06/2015 11:15  1.1.0  initial release

   Version 1.0 - Initial Release
      05/06/2015 20:09  1.0.1  Blank request data
      06/05/2015 14:55  1.0.0  initial release