@@ -1,0 +1,19 @@
+<?php
+
+namespace NS\FilteredPaginationBundle\Form\Type;
+
+use Symfony\Component\Form\AbstractType;
+use Symfony\Component\Form\FormBuilderInterface;
+
+class LimitSelectType extends AbstractType
+{
+    /**
+     * {@inheritdoc}
+     */
+    public function buildForm(FormBuilderInterface $builder, array $options)
+    {
+        $builder
+            ->setMethod('GET')
+            ->add('limit','choice',array('choices'=>array(10,25,50,75,100)));
+    }
+}
