@@ -3,6 +3,7 @@ VERSION 2  CHANGE HOW WE HANDLE PER-PAGE RESULTS
 ================================================
 
    Version 2.0 - Change how we handle per-page results
+      29/01/2016 16:31  2.0.1  Fix request query
       29/01/2016 15:27  2.0.0  initial release
 
 VERSION 1  INITIAL RELEASE
